# rosrpi

./: .gitignore  CONTAINER_START.bash  Dockerfile  README.md  README_without_docker.md  RUN_ME.bash  docker_build.bash  docker_install.bash  docker_new.bash  docker_run.bash  rpi_run.bash
docker_dev/: rpi_Dockerfile  rpi_docker_build.bash
docker_dev/jet/: Dockerfile  Dockerfile_yolo  dockerfile_jet  gstreamer_utils.py  jet_docker_build.bash  yolo_docker_build.bash
docker_dev/jet/gstreamer_utils/: __init__.py  gstreamer_utils.py
docker_dev/nn/: nn2_Dockerfile  nn_Dockerfile  nn_docker_build.bash
docker_dev/pc/: Dockerfile  docker_build.bash
docker_dev/rpi/: rpi_Dockerfile  rpi_docker_build.bash
jet_run/: docker-compose.yml
nn_ws/: fake_yolo.py  yolo.py
pc_run/: docker-compose.yml  docker_new.bash  docker_run.bash
pc_sim_run/: docker-compose.yml  pc_sim_start.bash
rpi_run/: .env  docker-compose.yaml  docker-compose.yml  rpi_docker_run.bash
workspace/: CONTAINER_START.bash  CONTAINER_START_JET.bash  gst_test.bash  rpi_depend_KOSTYL.bash
workspace/.catkin_tools/profiles/default/: devel_collisions.txt
workspace/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
workspace/devel/.private/core/: .catkin  setup.sh
workspace/devel/.private/mobile_robot_ros_driver/: .catkin  .rosinstall  setup.sh
workspace/devel/.private/my_best_controller/: .catkin  .rosinstall
workspace/devel/.private/my_pocket1/: .catkin  .rosinstall  local_setup.sh  setup.sh
workspace/devel/.private/my_robot_controller/: .catkin  .rosinstall  setup.sh
workspace/devel/.private/my_robot_model/: .catkin  .rosinstall  setup.sh
workspace/devel/.private/my_robot_simulation/: .catkin  setup.sh
workspace/devel/.private/my_super_robot_controller/: .catkin
workspace/src/core/: CMakeLists.txt  package.xml
workspace/src/core/config/: nav.rviz  rviz_config.rviz  rviz_test_config.rviz
workspace/src/core/launch/: bring_up.launch  gst_test.launch  ros_env_setup_pc.sh  ros_env_setup_rpi.sh  rviz.launch  rviz_jet.launch  rviz_remote.launch  sensors_test.launch  sensors_test_with_uri.launch  start.launch  start_nn.launch
workspace/src/core/maps/: my_map.yaml
workspace/src/core/meshes/: left_wheel_link.STL
workspace/src/core/scripts/: controller.py  cv.py  gstream_in.py  gstream_out.py  perception.py  pub_cmd_vel_once.py  yolo_in_ros.py
workspace/src/core/urdf/: robot_diff.gazebo
workspace/src/my_pocket1/: CMakeLists.txt  package.xml
workspace/src/my_robot_model/: package.xml
workspace/src/my_robot_simulation/: CMakeLists.txt
workspace/src/my_super_robot_controller/: CMakeLists.txt  package.xml
workspace/src/nav/: CMakeLists.txt
workspace/src/nav_v2/: CMakeLists.txt  package.xml
workspace/src/project_470122/: CMakeLists.txt  package.xml
(+211 files in other folders)
